--- a/server-java/pom.xml
+++ b/server-java/pom.xml
@@ -30,6 +30,19 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+        <!--Dependency for database connection-->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!--END of dependency for database connection-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
