--- a/server-java/src/main/resources/application.properties
+++ b/server-java/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 ## LINK : https://github.com/bharat0126/springboot-sqlite-app
+#podanie springowi sql dialectu
 spring.jpa.database-platform=pl.kalandyk.suplement.selector.config.SQLiteDialect
+#powiedzenie że ma baze updateowac a nie tworzyć od nowa
 spring.jpa.hibernate.ddl-auto=update
+#pokazanie w logach zapytan sql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
