--- a/server-java/src/main/resources/application-test.properties
+++ b/server-java/src/main/resources/application-test.properties
@@ -1,3 +1,5 @@
+db.url=jdbc:sqlite:test-suplementSelector.db
+
 ## LINK : https://github.com/bharat0126/springboot-sqlite-app
 #podanie springowi sql dialectu
 spring.jpa.database-platform=pl.kalandyk.suplement.selector.config.SQLiteDialect
@@ -5,7 +7,3 @@ spring.jpa.database-platform=pl.kalandyk.suplement.selector.config.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 #pokazanie w logach zapytan sql
 spring.jpa.show-sql=true
-
-#spring.thymeleaf.mode=LEGACYHTML5
-spring.thymeleaf.cache=false
-db.url=jdbc:sqlite:suplementSelector.db
